[gd_scene load_steps=7 format=3 uid="uid://dua04n3geh0yf"]

[ext_resource type="Theme" uid="uid://yt0vgau51udk" path="res://src/ui/components/debug_panel/dark_theme/Dark.theme" id="1_c8oen"]
[ext_resource type="Script" path="res://src/ui/components/debug_panel/debug_panel.gd" id="2_juhlr"]
[ext_resource type="Texture2D" uid="uid://7ixgxgtq3wlr" path="res://src/ui/components/debug_panel/icons/Search.svg" id="3_nth2r"]
[ext_resource type="Texture2D" uid="uid://ckn18yn0v8tsa" path="res://src/ui/components/debug_panel/icons/Clear.svg" id="4_k7442"]
[ext_resource type="Texture2D" uid="uid://cqwsvinsujxri" path="res://src/ui/components/debug_panel/icons/ActionCopy.svg" id="5_0aohs"]
[ext_resource type="Texture2D" uid="uid://c0x4ssitmbcrg" path="res://src/ui/components/debug_panel/icons/GuiVisibilityHidden.svg" id="5_34smo"]

[node name="DebugPanel" type="Control"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -505.0
offset_top = -305.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_c8oen")
script = ExtResource("2_juhlr")

[node name="TabContainer_DebugPanel" type="TabContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c8oen")
tab_focus_mode = 0

[node name="Console" type="VBoxContainer" parent="TabContainer_DebugPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer_DebugPanel/Console"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer_DebugPanel/Console/HBoxContainer"]
layout_mode = 2
text = "Filter:"

[node name="LineEdit_Filter" type="LineEdit" parent="TabContainer_DebugPanel/Console/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
placeholder_text = "Filter Messages"
right_icon = ExtResource("3_nth2r")

[node name="Button_Clear" type="Button" parent="TabContainer_DebugPanel/Console/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_k7442")

[node name="Button_Copy" type="Button" parent="TabContainer_DebugPanel/Console/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("5_0aohs")

[node name="Tree_Console" type="Tree" parent="TabContainer_DebugPanel/Console"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
theme_override_constants/scroll_speed = 100
theme_override_constants/scrollbar_margin_left = 5
theme_override_constants/scrollbar_margin_top = 5
theme_override_constants/scrollbar_margin_right = 5
theme_override_constants/scrollbar_margin_bottom = 5
theme_override_constants/scrollbar_h_separation = 5
theme_override_constants/scrollbar_v_separation = 5
theme_override_font_sizes/font_size = 12
columns = 2
allow_reselect = true
allow_rmb_select = true
hide_root = true
select_mode = 1

[node name="Expression" type="VBoxContainer" parent="TabContainer_DebugPanel"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="TabContainer_DebugPanel/Expression"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="TextEdit" parent="TabContainer_DebugPanel/Expression"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button_ShowHide" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "Debug Panel"
icon = ExtResource("5_34smo")

[node name="PopupMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true

[connection signal="text_changed" from="TabContainer_DebugPanel/Console/HBoxContainer/LineEdit_Filter" to="." method="_on_line_edit_filter_text_changed"]
[connection signal="pressed" from="TabContainer_DebugPanel/Console/HBoxContainer/Button_Clear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="TabContainer_DebugPanel/Console/HBoxContainer/Button_Copy" to="." method="_on_button_copy_pressed"]
[connection signal="item_mouse_selected" from="TabContainer_DebugPanel/Console/Tree_Console" to="." method="_on_tree_console_item_mouse_selected"]
[connection signal="text_changed" from="TabContainer_DebugPanel/Expression/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Button_ShowHide" to="." method="_on_button_show_hide_pressed"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
